[KARAF-34] Create an encryption service per encryption algorithm to provide thread safe implementation.
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@996922 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/src/main/distribution/text/etc/org.apache.karaf.jaas.cfg
+++ b/assembly/src/main/distribution/text/etc/org.apache.karaf.jaas.cfg
@@ -19,5 +19,12 @@
 
 #
 # Set the encryption algorithm to use in Karaf JAAS login module
-# 
+# Supported encryption algorithms follow:
+#   MD2
+#   MD5
+#   SHA-1
+#   SHA-256
+#   SHA-384
+#   SHA-512
+#
 #encryption=MD5
