[KARAF-191] Create a Karaf Util module (jar) to gather shared resources.
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@997058 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <inceptionYear>2007</inceptionYear>
 
     <modules>
+        <module>util</module>
         <module>main</module>
         <module>features</module>
         <module>admin</module>
