KARAF-191: use the Properties in various places
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@997088 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.karaf</groupId>
+                <artifactId>org.apache.karaf.util</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.karaf</groupId>
                 <artifactId>org.apache.karaf.exception</artifactId>
                 <version>${project.version}</version>
             </dependency>
