--- a/shell/dev/pom.xml
+++ b/shell/dev/pom.xml
@@ -37,6 +37,11 @@
     </dependency>
 
     <dependency>
+        <groupId>org.apache.karaf</groupId>
+        <artifactId>org.apache.karaf.util</artifactId>
+    </dependency>
+
+    <dependency>
         <groupId>org.ops4j.pax.url</groupId>
         <artifactId>pax-url-wrap</artifactId>
     </dependency>
@@ -78,6 +83,7 @@
                       </Import-Package>
                       <Private-Package>
                           org.apache.felix.utils.version,
+                          org.apache.karaf.util,
                           !*
                       </Private-Package>
                       <_versionpolicy>${bnd.version.policy}</_versionpolicy>
