KARAF-34: Fix jasypt encryption service
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@997094 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/src/main/distribution/text/etc/org.apache.karaf.jaas.cfg
+++ b/assembly/src/main/distribution/text/etc/org.apache.karaf.jaas.cfg
@@ -18,6 +18,19 @@
 ################################################################################
 
 #
+# Boolean enabling / disabling encrypted passwords
+#
+encryption.enabled = false
+
+#
+# Encryption Service name
+#   the default one is 'basic'
+#   a more powerful one named 'jasypt' is available
+#       when installing the encryption feature
+#
+encryption.name =
+
+#
 # Set the encryption algorithm to use in Karaf JAAS login module
 # Supported encryption algorithms follow:
 #   MD2
@@ -27,4 +40,12 @@
 #   SHA-384
 #   SHA-512
 #
-#encryption=MD5
+encryption.algorithm = MD5
+
+#
+# Encoding of the encrypted password.
+# Can be:
+#   hexadecimal
+#   base64
+#
+encryption.encoding = hexadecimal
