KARAF-196: use felix header parsing library, remote the use of the green color which doesn't provide any information
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@997239 13f79535-47bb-0310-9956-ffa450edef68

--- a/shell/osgi/pom.xml
+++ b/shell/osgi/pom.xml
@@ -94,7 +94,11 @@
                         <DynamicImport-Package>
                             org.springframework.*
                         </DynamicImport-Package>
-                        <Private-Package>org.apache.felix.utils.version,!*</Private-Package>
+                        <Private-Package>
+                            org.apache.felix.utils.version,
+                            org.apache.felix.utils.manifest,
+                            !*
+                        </Private-Package>
                         <_versionpolicy>${bnd.version.policy}</_versionpolicy>
                     </instructions>
                 </configuration>
