[KARAF-34] put more logic in the abstract login module and support customized prefix/suffix
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@997344 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/src/main/distribution/text/etc/org.apache.karaf.jaas.cfg
+++ b/assembly/src/main/distribution/text/etc/org.apache.karaf.jaas.cfg
@@ -31,6 +31,16 @@ encryption.enabled = false
 encryption.name =
 
 #
+# Encryption prefix
+#
+encryption.prefix = {CRYPT}
+
+#
+# Encryption suffix
+#
+encryption.suffix = {CRYPT}
+
+#
 # Set the encryption algorithm to use in Karaf JAAS login module
 # Supported encryption algorithms follow:
 #   MD2
