[KARAF-106] Excluded demos folder from minimal distro. Removed all pdf and html from minimal distro. Removed duplicate minimal occurance in the distribution artifact.
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@997356 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -435,7 +435,7 @@
                             <descriptors>
                                 <descriptor>src/main/descriptors/unix-minimal-bin.xml</descriptor>
                             </descriptors>
-                            <finalName>${project.artifactId}-minimal-${project.version}</finalName>
+                            <finalName>${project.artifactId}-${project.version}</finalName>
                             <tarLongFileMode>gnu</tarLongFileMode>
                         </configuration>
                     </execution>
@@ -463,7 +463,7 @@
                             <descriptors>
                                 <descriptor>src/main/descriptors/windows-minimal-bin.xml</descriptor>
                             </descriptors>
-                            <finalName>${project.artifactId}-minimal-${project.version}</finalName>
+                            <finalName>${project.artifactId}-${project.version}</finalName>
                             <appendAssemblyId>true</appendAssemblyId>
                             <assemblyId />
                         </configuration>
