[KARAF-219] Upgrade to latest gogo

--- a/admin/command/pom.xml
+++ b/admin/command/pom.xml
@@ -88,7 +88,7 @@
                             !org.apache.karaf.admin.internal,
                             javax.management,
                             javax.management.loading,
-                            org.osgi.service.command,
+                            org.apache.felix.service.command,
                             org.apache.felix.gogo.commands,
                             org.apache.karaf.shell.console,
                             *
