--- a/features/core/pom.xml
+++ b/features/core/pom.xml
@@ -104,7 +104,7 @@
                             !org.apache.karaf.features,
                             javax.management,
                             javax.management.loading,
-                            org.osgi.service.command,
+                            org.apache.felix.service.command,
                             org.apache.felix.gogo.commands,
                             org.apache.karaf.shell.console,
                             *
