--- a/shell/dev/pom.xml
+++ b/shell/dev/pom.xml
@@ -76,7 +76,7 @@
                       <Export-Package>${project.artifactId}*;version=${project.version}</Export-Package>
                       <Import-Package>
                           !${project.artifactId}*,
-                          org.osgi.service.command,
+                          org.apache.felix.service.command,
                           org.apache.felix.gogo.commands,
                           org.apache.karaf.shell.console,
                           *
