--- a/admin/core/pom.xml
+++ b/admin/core/pom.xml
@@ -163,7 +163,7 @@
                             !org.apache.karaf.jpm,
                             javax.management,
                             javax.management.loading,
-                            org.osgi.service.command,
+                            org.apache.felix.service.command,
                             org.apache.felix.gogo.commands,
                             org.apache.karaf.shell.console,
                             *
