--- a/shell/ssh/pom.xml
+++ b/shell/ssh/pom.xml
@@ -89,7 +89,7 @@
                         <Export-Package>${project.artifactId}*;version=${project.version}</Export-Package>
                         <Import-Package>
                             !${project.artifactId}*,
-                            org.osgi.service.command,
+                            org.apache.felix.service.command,
                             org.apache.felix.gogo.commands,
                             org.apache.karaf.shell.console,
                             org.apache.sshd.server.keyprovider,
