--- a/shell/wrapper/pom.xml
+++ b/shell/wrapper/pom.xml
@@ -95,7 +95,7 @@
                             !${project.artifactId}*,
                             !org.apache.karaf.main,
                             !org.tanukisoftware.wrapper,
-                            org.osgi.service.command,
+                            org.apache.felix.service.command,
                             org.apache.felix.gogo.commands,
                             org.apache.karaf.shell.console,
                             *
