--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
         <pax.runner.version>1.5.0</pax.runner.version>
         <pax.url.version>1.1.3</pax.url.version>
         <pax.web.version>0.7.3</pax.web.version>
+        <pax.tinybundles.version>1.3.0</pax.tinybundles.version>
         <servlet.api.version>2.5</servlet.api.version>
         <spring.osgi.version>1.2.0</spring.osgi.version>
         <spring2.version>2.5.6.SEC01</spring2.version>
@@ -714,6 +715,11 @@
                 <groupId>org.ops4j.pax.exam</groupId>
                 <artifactId>pax-exam-junit-extender-impl</artifactId>
                 <version>${pax.exam.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ops4j.pax.swissbox</groupId>
+                <artifactId>pax-swissbox-tinybundles</artifactId>
+                <version>${pax.tinybundles.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse</groupId>
