--- a/tooling/testing/pom.xml
+++ b/tooling/testing/pom.xml
@@ -64,6 +64,10 @@
             <artifactId>pax-exam-junit-extender-impl</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.ops4j.pax.swissbox</groupId>
+            <artifactId>pax-swissbox-tinybundles</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.servicemix.bundles</groupId>
             <artifactId>org.apache.servicemix.bundles.junit</artifactId>
         </dependency>
@@ -132,6 +136,7 @@
                         <Import-Package>
                             !org.apache.karaf.testing*,
                             !org.ops4j.pax.exam.junit.options,
+                            org.ops4j.pax.swissbox.tinybundles*;resolution:=optional,
                             *
                         </Import-Package>
                         <Include-Resource>
