--- a/pom.xml
+++ b/pom.xml
@@ -135,8 +135,8 @@
         <maven.version>2.0.9</maven.version>
         <mina.version>2.0.1</mina.version>
         <osgi.version>4.2.0</osgi.version>
-        <pax.exam.version>1.2.2</pax.exam.version>
-        <pax.logging.version>1.5.3</pax.logging.version>
+        <pax.exam.version>2.0.0-M2-SNAPSHOT</pax.exam.version>
+        <pax.logging.version>1.5.4-SNAPSHOT</pax.logging.version>
         <pax.runner.version>1.5.0</pax.runner.version>
         <pax.url.version>1.2.1</pax.url.version>
         <pax.web.version>0.8.1</pax.web.version>
@@ -756,17 +756,32 @@
             </dependency>
             <dependency>
                 <groupId>org.ops4j.pax.exam</groupId>
-                <artifactId>pax-exam-junit</artifactId>
+                <artifactId>pax-exam-junit4</artifactId>
                 <version>${pax.exam.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ops4j.pax.exam</groupId>
-                <artifactId>pax-exam-container-default</artifactId>
+                <artifactId>pax-exam-container-paxrunner</artifactId>
                 <version>${pax.exam.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ops4j.pax.exam</groupId>
-                <artifactId>pax-exam-junit-extender-impl</artifactId>
+                <artifactId>pax-exam-container-native</artifactId>
+                <version>${pax.exam.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ops4j.pax.exam</groupId>
+                <artifactId>pax-exam-extender</artifactId>
+                <version>${pax.exam.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ops4j.pax.exam</groupId>
+                <artifactId>pax-exam-extender-service</artifactId>
+                <version>${pax.exam.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ops4j.pax.exam</groupId>
+                <artifactId>pax-exam-link-mvn</artifactId>
                 <version>${pax.exam.version}</version>
             </dependency>
             <dependency>
