--- a/admin/command/pom.xml
+++ b/admin/command/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.admin</groupId>
         <artifactId>admin</artifactId>
-        <version>2.2.0</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>org.apache.karaf.admin.command</artifactId>
