--- a/assemblies/features/pom.xml
+++ b/assemblies/features/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.assemblies</groupId>
         <artifactId>assemblies</artifactId>
-        <version>2.2.0</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.assemblies.features</groupId>
