--- a/demos/dump/pom.xml
+++ b/demos/dump/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.karaf.demos</groupId>
     <artifactId>demos</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>dump</artifactId>
