--- a/deployer/kar/pom.xml
+++ b/deployer/kar/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.deployer</groupId>
 	   <artifactId>deployer</artifactId>
-	   <version>2.2.0</version>
+	   <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>org.apache.karaf.deployer.kar</artifactId>
