--- a/features/obr/pom.xml
+++ b/features/obr/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.features</groupId>
         <artifactId>features</artifactId>
-        <version>2.2.0</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>org.apache.karaf.features.obr</artifactId>
