--- a/jaas/modules/pom.xml
+++ b/jaas/modules/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.jaas</groupId>
         <artifactId>jaas</artifactId>
-        <version>2.2.0</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>org.apache.karaf.jaas.modules</artifactId>
