--- a/shell/dev/pom.xml
+++ b/shell/dev/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>shell</artifactId>
         <groupId>org.apache.karaf.shell</groupId>
-        <version>2.2.0</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>org.apache.karaf.shell.dev</artifactId>
