--- a/tooling/features-maven-plugin/pom.xml
+++ b/tooling/features-maven-plugin/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.tooling</groupId>
         <artifactId>tooling</artifactId>
-        <version>2.2.0</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>features-maven-plugin</artifactId>
