--- a/webconsole/branding/pom.xml
+++ b/webconsole/branding/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.webconsole</groupId>
         <artifactId>webconsole</artifactId>
-        <version>2.2.0</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>org.apache.karaf.webconsole.branding</artifactId>
