--- a/archetypes/itests/pom.xml
+++ b/archetypes/itests/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>archetypes</artifactId>
         <groupId>org.apache.karaf</groupId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.0</version>
     </parent>
     
     <groupId>org.apache.karaf.archetypes</groupId>
