--- a/demos/branding/shell/pom.xml
+++ b/demos/branding/shell/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.demos</groupId>
         <artifactId>org.apache.karaf.demos.branding</artifactId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.0</version>
     </parent>
 
     <artifactId>org.apache.karaf.demos.branding.shell</artifactId>
