--- a/diagnostic/command/pom.xml
+++ b/diagnostic/command/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.diagnostic</groupId>
         <artifactId>diagnostic</artifactId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.0</version>
     </parent>
 
     <artifactId>org.apache.karaf.diagnostic.command</artifactId>
