--- a/shell/web/pom.xml
+++ b/shell/web/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <artifactId>shell</artifactId>
         <groupId>org.apache.karaf.shell</groupId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.0</version>
     </parent>
 
     <artifactId>org.apache.karaf.shell.web</artifactId>
     <packaging>bundle</packaging>
     <name>Apache Karaf :: Shell :: Web Commands</name>
-    <version>2.2.1-SNAPSHOT</version>
+    <version>2.2.0</version>
     <description>This bundle provides Karaf shell commands to manipulate web application bundles.</description>
 
     <properties>
