--- a/tooling/cmdhelp-maven-plugin/pom.xml
+++ b/tooling/cmdhelp-maven-plugin/pom.xml
@@ -24,7 +24,7 @@
     <parent>
       <groupId>org.apache.karaf.tooling</groupId>
       <artifactId>tooling</artifactId>
-      <version>2.2.1-SNAPSHOT</version>
+      <version>2.2.0</version>
     </parent>
 
     <artifactId>cmdhelp-maven-plugin</artifactId>
