[KARAF-476] Add change RMI server port support.
git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.2.x@1074532 13f79535-47bb-0310-9956-ffa450edef68

--- a/admin/core/src/main/resources/org/apache/karaf/admin/etc/org.apache.karaf.management.cfg
+++ b/admin/core/src/main/resources/org/apache/karaf/admin/etc/org.apache.karaf.management.cfg
@@ -19,7 +19,7 @@
 
 #
 rmiRegistryPort = ${SUBST-RMI-REGISTRY-PORT}
-rmiServerPort = 44444
+rmiServerPort = ${SUBST-RMI-SERVER-PORT}
 jmxRealm = karaf
 serviceUrl = service:jmx:rmi://localhost:${rmiServerPort}/jndi/rmi://localhost:${rmiRegistryPort}/karaf-${karaf.name}
 daemon = true
