--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
         <pax.logging.version>1.6.1</pax.logging.version>
         <pax.runner.version>1.5.0</pax.runner.version>
         <pax.url.version>1.2.5</pax.url.version>
-        <pax.web.version>1.0.1</pax.web.version>
+        <pax.web.version>1.0.2-SNAPSHOT</pax.web.version>
         <pax.tinybundles.version>1.3.0</pax.tinybundles.version>
         <servlet.api.version>2.5</servlet.api.version>
         <slf4j.version>1.6.1</slf4j.version>
