[KARAF-527] The console bundle should indicate it provides the gogo related services
git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.2.x@1082852 13f79535-47bb-0310-9956-ffa450edef68

--- a/shell/console/pom.xml
+++ b/shell/console/pom.xml
@@ -143,6 +143,11 @@
                         <Main-Class>
                             org.apache.karaf.shell.console.Main
                         </Main-Class>
+                        <Export-Service>
+                            org.apache.felix.service.threadio.ThreadIO,
+                            org.apache.felix.service.command.CommandProcessor,
+                            org.apache.felix.service.command.Converter
+                        </Export-Service>
                     </instructions>
                     <unpackBundle>true</unpackBundle>
                 </configuration>
