--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
         <pax.exam.version>1.2.4</pax.exam.version>
         <pax.logging.version>1.6.1</pax.logging.version>
         <pax.runner.version>1.6.1</pax.runner.version>
-        <pax.url.version>1.3.1-SNAPSHOT</pax.url.version>
+        <pax.url.version>1.2.6</pax.url.version>
         <pax.web.version>1.0.2</pax.web.version>
         <pax.tinybundles.version>1.3.0</pax.tinybundles.version>
         <servlet.api.version>2.5</servlet.api.version>
