[KARAF-988] Upgrade to blueprint 0.4.1

--- a/assemblies/features/framework/src/main/filtered-resources/resources/etc/config.properties
+++ b/assemblies/features/framework/src/main/filtered-resources/resources/etc/config.properties
@@ -107,3 +107,7 @@ obr.repository.url =
 #
 org.apache.aries.blueprint.synchronous=true
 
+#
+# Do not weave all any classes by default
+#
+org.apache.aries.proxy.weaving.enabled=
